# justext-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  PLAN.md  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
benches/: extraction.rs
scripts/: compare_python.py
src/: classify.rs  error.rs  lib.rs  paragraph.rs  paragraph_maker.rs  preprocess.rs  revise.rs
src/stoplists/: mod.rs
tests/: integration.rs  stoplists.rs
tests/bindings/kotlin/: settings.gradle.kts
tests/bindings/kotlin/src/test/kotlin/: JustextTest.kt
tests/bindings/python/: test_classify.py  test_config.py  test_extract.py
tests/bindings/swift/: .gitignore  Package.swift
tests/bindings/swift/Sources/justext_uniffiFFI/: module.modulemap
tests/bindings/swift/Tests/JustextTests/: JustextTests.swift
uniffi/: .gitignore  Cargo.toml  uniffi.toml
uniffi/src/: lib.rs
