[package]
name = "justext"
version = "0.1.0"
edition = "2021"
description = "Rust port of JusText — paragraph-level boilerplate removal for HTML"
license = "BSD-2-Clause"
rust-version = "1.83"
readme = "README.md"
repository = "https://github.com/nchapman/justext-rs"
documentation = "https://docs.rs/justext"
keywords = ["justext", "boilerplate", "html", "extraction", "text"]
categories = ["parser-implementations", "text-processing", "web-programming"]
exclude = ["CLAUDE.md", "PLAN.md"]

[lib]
name = "justext"

[dependencies]
# HTML parsing + CSS selectors (html5ever-based, spec-compliant)
scraper = "0.25"
ego-tree = "0.10"

# Error types
thiserror = "2"

# Logging (optional — zero-cost when disabled)
tracing = { version = "0.1", optional = true }

[features]
default = []
tracing = ["dep:tracing"]

[dev-dependencies]
pretty_assertions = "1"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "extraction"
harness = false

[[bin]]
name = "compare"
path = "src/bin/compare.rs"
required-features = []
